# EcoMugG4Test

./: CMakeLists.txt  EcoMugG4Test.cxx
Action/: ActionInitialization.cxx  ActionInitialization.hxx  DetectorConstruction.cxx  DetectorConstruction.hxx  PhysicsList.cxx  PhysicsList.hxx  PrimaryGeneratorAction.cxx  PrimaryGeneratorAction.hxx  RunAction.cxx  RunAction.hxx
EcoMug/: EcoMug.h
Generator/: CosmicRayMuon.cxx  CosmicRayMuon.hxx
Hit/: BallHit.hxx
SD/: BallSD.cxx  BallSD.hxx
Utility/: FixedString.hxx  FixedString.inl
scripts/: init_vis.mac  run.mac  vis.mac
